<resources>
    <string name="app_name">Timetable</string>
    <!--    Developer names and Roles -->
    <string name="creator">Kenneth Murerwa</string>
    <string name="creator_roles">Creator</string>

    <string name="contributor1">Dennis Peterson</string>
    <string name="developer1_roles">Developer</string>

    <string name="contributor2">Alex Muturi</string>
    <string name="developer2_roles">Developer</string>

    <string name="contributor3">Alex Churkin</string>
    <string name="developer3_roles">Developer</string>

    <string name="empty">Wow, such empty</string>
<!--    About activity  -->
    <string name="about">About</string>
    <string name="app_version">V: %1$s</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Help Improve \nIf you want to enhance or improve  this app, please contact us.</string>
    <string name="credits">Credits</string>
    <string name="go_to_project">Go to <a href="https://github.com/xwaxes01/TimeTable">Project.</a></string>
    <string name="copyright">2019–2020 XwaxesNet.All Rights Reserved.</string>
    <string name="rate">Rate</string>
    <!--    Contributors Credit card -->
    <string name="ok">OK</string>
    <string name="role">Developer Role</string>
    <string name="name">Developer Name</string>

<!--    Settings -->
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>

    <!--    Navigation Drawer   -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="classes">Classes</string>
    <string name="exams">Exams</string>
    <string name="dark_theme">Dark Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_unit">Search unit</string>

    <!--    Class card attributes   -->
    <string name="unit_name">Unit Name</string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="unit_code_and_venue">Unit Code | Venue</string>
    <string name="duration">StartTime - EndTime</string>
    <string name="show_changelog">Show App Changelog</string>
    <string name="unit_category">Core | Opt</string>
</resources>
