<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16sp"
            android:paddingBottom="16sp">

            <TextView
                android:id="@+id/unit_code_and_venue"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:text="@string/unit_code_and_venue"
                android:textAllCaps="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="casual"
                android:text="@string/duration"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/unit_code_and_venue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/unit_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/unit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/unit_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.005"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration" />

            <TextView
                android:id="@+id/lecturer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bad_script"
                android:text="@string/lecturer_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/unit_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </androidx.cardview.widget.CardView>