<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setNightTheme"
        android:padding="16dp">

        <TextView
            android:id="@+id/dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNightMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/dark_theme"
            android:layout_toRightOf="@id/dark_theme" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notify_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/notifications"
            android:layout_toRightOf="@id/notifications" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showChangelog"
        android:padding="16dp">

        <TextView
            android:id="@+id/show_changelog"
            android:onClick="showChangelog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_changelog" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>
