<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include layout="@layout/content_main" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:drawableStart="@drawable/ic_settings"
                android:drawableLeft="@drawable/ic_settings"
                android:drawablePadding="32dp"
                android:gravity="center_vertical"
                android:onClick="openSettingsActivity"
                android:paddingStart="?attr/listPreferredItemPaddingLeft"
                android:paddingLeft="?attr/listPreferredItemPaddingLeft"
                android:paddingEnd="?attr/listPreferredItemPaddingRight"
                android:paddingRight="?attr/listPreferredItemPaddingRight"
                android:text="@string/settings" />

            <TextView
                android:id="@+id/nav_about"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:layout_below="@id/nav_settings"
                android:drawableStart="@drawable/ic_about"
                android:drawableLeft="@drawable/ic_about"
                android:drawablePadding="28dp"
                android:gravity="center_vertical"
                android:onClick="openAboutActivity"
                android:paddingStart="?attr/listPreferredItemPaddingLeft"
                android:paddingLeft="?attr/listPreferredItemPaddingLeft"
                android:paddingEnd="?attr/listPreferredItemPaddingRight"
                android:paddingRight="?attr/listPreferredItemPaddingRight"
                android:text="@string/about" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_about"
                android:onClick="setNightTheme">

                <TextView
                    android:id="@+id/nav_dark_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/listPreferredItemHeightSmall"
                    android:drawableStart="@drawable/ic_theme"
                    android:drawableLeft="@drawable/ic_theme"
                    android:drawablePadding="28dp"
                    android:gravity="center_vertical"
                    android:onClick="setNightTheme"
                    android:paddingStart="?attr/listPreferredItemPaddingLeft"
                    android:paddingLeft="?attr/listPreferredItemPaddingLeft"
                    android:paddingEnd="?attr/listPreferredItemPaddingRight"
                    android:paddingRight="?attr/listPreferredItemPaddingRight"
                    android:text="@string/dark_theme" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchNightMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/nav_dark_theme"
                    android:layout_toRightOf="@id/nav_dark_theme"
                    android:padding="16dp" />
            </RelativeLayout>

        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>